fix label not visible

--- a/src/App.css
+++ b/src/App.css
@@ -215,6 +215,7 @@ button.rbc-input::-moz-focus-inner {
 }
 .rbc-event-label {
   font-size: 80%;
+  color: #111;
 }
 .rbc-event-overlaps {
   box-shadow: -1px 1px 5px 0px rgba(51, 51, 51, 0.5);
